ingress/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ingress
spec:
   selector:
       matchLabels:
            app: frontend
   replicas: 2
   template:
      metadata:
           name: ingress-pod
           labels:
              app: frontend
      spec:
         containers:
              - name: container
                image: sourabhtailor/sourabh
