ingress/svc.yml
apiVersion: v1
kind: Service
metadata:
     name: svc1
spec:
    selector:
        app: frontend
    type: NodePort
    ports:
       - targetPort: 80
         port: 80
         nodePort: 31081
