ingress/svc2.yml
apiVersion: v1
kind: Service
metadata:
     name: svc2
spec:
    selector:
        app: v1
    type: NodePort
    ports:
       - targetPort: 80
         port: 80
         nodePort: 31082
